[tool.poetry]
name = "deutschland"
version = "0.3.0"
description = ""
license = "Apache-2.0"
authors = ["Lilith Wittmann <mail@lilithwittmann.de>"]
readme = "README.md"
repository = "https://github.com/bundesAPI/deutschland"
include = ["src/deutschland/bundesanzeiger/assets/model.onnx"]
packages = [
    { include = "deutschland", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.6.2"
Shapely = "^1.8.0"
mapbox-vector-tile = "^1.2.1"
requests = "^2.26.0"
dateparser = "^1.0.0"
gql = "^2.0.0"
boto3 = "^1.18.9"
slugify = "^0.0.1"
Pillow = "^8.3.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
pandas = "1.1.5"
more-itertools = "^8.10.0"
onnxruntime = "^1.10.0"
numpy = "1.19.0"

# Those are packages which were included in previous release so not optional
de-autobahn = {version = "^1.0.4"}
de-bundesrat = {version="^0.1.0"}
de-bundestag = {version="^0.1.0"}
de-dwd = {version = "^1.0.1"}
de-interpol = {version="^0.1.0"}
de-jobsuche = {version="^0.1.0"}
de-ladestationen = {version="^1.0.5"}
de-mudab = {version="^0.1.0"}
de-nina = {version= "^1.0.1"}
de-polizei-brandenburg= {version= "^0.1.0"}
pypresseportal = {version= "^0.1"}
de-risikogebiete = {version= "^0.1.0"}
de-smard = {version= "^0.1.0"}
de-strahlenschutz = {version= "^1.0.0"}
de-travelwarning= {version= "^0.1.0"}
de-zoll= {version= "^0.1.0"}

# Optional packages
de-ausbildungssuche  = {version= "^0.1.0", optional = true}
de-berufssprachkurssuche = {version= "^0.1.0", optional = true}
de-bundestag-lobbyregister = {version= "^0.1.0", optional = true}
de-coachingangebote = {version= "^0.1.0", optional = true}
de-dip-bundestag = {version= "^0.1.0", optional = true}
de-entgeltatlas  = {version= "^0.1.0", optional = true}
de-hochwasserzentralen = {version= "^0.1.0", optional = true}
de-pegel-online = {version= "^0.1.0", optional = true}
de-pflanzenschutzmittelzulassung = {version= "^0.1.0", optional = true}
de-studiensuche  = {version= "^0.1.0", optional = true}
de-tagesschau = {version= "^0.1.0", optional = true}
de-weiterbildungssuche  = {version= "^0.1.0", optional = true}
de-feiertage  = {version= "^1.0.1", optional = true}
de-marktstammdaten  = {version= "^0.1.0", optional = true}
de-vag  = {version= "^0.1.0", optional = true}
de-abfallnavi  = {version= "^0.1.0", optional = true}
de-bundeshaushalt  = {version= "^1.0.0", optional = true}
de-ecovisio  = {version= "^0.1.0", optional = true}
de-dashboarddeutschland  = {version= "^0.1.0", optional = true}
# Tests are for non openapi version of this package. Leave out for now.
#de-lebensmittelwarnung = {version="^0.1.0",optional=true}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bundesAPI/deutschland/issues"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[tool.poetry.extras]
bundestag_lobbyregister = ["de-bundestag-lobbyregister"]
dip_bundestag = ["de-dip-bundestag"]
pegel_online=  ["de-pegel-online"]
ausbildungssuche  = ["de-ausbildungssuche"]
berufssprachkurssuche = ["de-berufssprachkurssuche"]
coachingangebote = ["de-coachingangebote"]
entgeltatlas  = ["de-entgeltatlas"]
hochwasserzentralen = ["de-hochwasserzentralen"]
pflanzenschutzmittelzulassung = ["de-pflanzenschutzmittelzulassung"]
studiensuche  = ["de-studiensuche"]
tagesschau = ["de-tagesschau"]
feiertage = ["de-feiertage"]
marktstammdaten = ["de-marktstammdaten"]
weiterbildungssuche  =["de-weiterbildungssuche"]
vag  =["de-vag"]
abfallnavi  =["de-abfallnavi"]
bundeshaushalt  =["de-bundeshaushalt"]
ecovisio  =["de-ecovisio"]
dashboarddeutschland=["de-dashboarddeutschland"]
all = ["de-bundestag-lobbyregister","de-dip-bundestag","de-pegel-online","de-ausbildungssuche",
    "de-berufssprachkurssuche","de-coachingangebote","de-dip-bundestag","de-entgeltatlas",
    "de-hochwasserzentralen","de-pflanzenschutzmittelzulassung","de-studiensuche",
    "de-tagesschau", "de-weiterbildungssuche","de-feiertage","de-marktstammdaten","de-vag","de-abfallnavi","de-bundeshaushalt",
    "de-ecovisio","de-dashboarddeutschland"]
#lebensmittelwarnung =  ["de-lebensmittelwarnung"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38
isolated_build = True

[tox:.package]
basepython = python3

[testenv]
deps = pytest
usedevelop = true
extras =
    all
commands =
    pytest
"""

[tool.isort]
profile = "black"
