[tool.poetry]
name = "deutschland"
version = "0.4.2"
description = ""
license = "Apache-2.0"
authors = ["Lilith Wittmann <mail@lilithwittmann.de>"]
readme = "README.md"
repository = "https://github.com/bundesAPI/deutschland"
include = ["src/deutschland/bundesanzeiger/assets/model.onnx"]
packages = [
    { include = "deutschland", from = "src" },
]
[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.26.0"
dateparser = "^1.0.0"
beautifulsoup4 = "^4.9.3"
more-itertools = "^8.10.0"
numpy = [
    {version = "^1.19.0", python = ">=3.8,<3.12"},
    {version = "^1.26.2", python = ">=3.12"}
]

pillow = "^10.0.0"
mapbox-vector-tile = "^2.0.1"
lxml = "^4.9.3"
pandas = [
    {version = "*", python = ">=3.8,<3.12"},
    {version = ">2.1.2", python = ">=3.12"}
]


# 1.16.0 problem: https://github.com/microsoft/onnxruntime/issues/17631
onnxruntime = ">1.10.0,!=1.16.0"

# Those are packages which were included in previous release so not optional
de-autobahn = {version = "^1.0.4"}
de-bundesrat = {version="^0.1.0"}
de-bundestag = {version="^0.1.0"}
de-dwd = {version = "^1.0.1"}
de-interpol = {version="^0.1.0"}
de-jobsuche = {version="^0.1.0"}
de-ladestationen = {version="^1.0.5"}
de-mudab = {version="^0.1.0"}
de-nina = {version= "^1.0.1"}
de-polizei-brandenburg= {version= "^0.1.0"}
de-risikogebiete = {version= "^0.1.0"}
de-smard = {version= "^0.1.0"}
de-strahlenschutz = {version= "^1.0.0"}
de-travelwarning= {version= "^0.1.0"}
de-zoll= {version= "^0.1.0"}

# Optional packages
de-abfallnavi  = {version= "^0.1.0", optional = true}
de-ausbildungssuche  = {version= "^0.1.0", optional = true}
de-berufssprachkurssuche = {version= "^0.1.0", optional = true}
de-bewerberboerse = {version= "^0.1.0", optional = true}
de-bundeshaushalt  = {version= "^1.0.0", optional = true}
de-bundestag-lobbyregister = {version= "^0.1.0", optional = true}
de-coachingangebote = {version= "^0.1.0", optional = true}
de-dashboarddeutschland  = {version= "^0.1.0", optional = true}
de-destatis = {version= "^0.1.0", optional = true}
de-dip-bundestag = {version= "^0.1.0", optional = true}
de-ecovisio  = {version= "^0.1.0", optional = true}
de-entgeltatlas  = {version= "^0.1.0", optional = true}
de-feiertage  = {version= "^1.0.1", optional = true}
de-hochwasserzentralen = {version= "^0.1.0", optional = true}
de-klinikatlas = {version= "^0.1.0", optional = true}
de-marktstammdaten  = {version= "^0.1.0", optional = true}
de-pegel-online = {version= "^0.1.0", optional = true}
de-pflanzenschutzmittelzulassung = {version= "^0.1.0", optional = true}
de-studiensuche  = {version= "^0.1.0", optional = true}
de-tagesschau = {version= "^0.1.0", optional = true}
de-weiterbildungssuche  = {version= "^0.1.0", optional = true}
de-vag  = {version= "^0.1.0", optional = true}
# Tests are for non openapi version of this package. Leave out for now.
#de-lebensmittelwarnung = {version="^0.1.0",optional=true}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bundesAPI/deutschland/issues"

[tool.poetry.extras]
abfallnavi = ["de-abfallnavi"]
ausbildungssuche = ["de-ausbildungssuche"]
bewerberboerse = ["de-bewerberboerse"]
berufssprachkurssuche = ["de-berufssprachkurssuche"]
bundeshaushalt = ["de-bundeshaushalt"]
bundestag_lobbyregister = ["de-bundestag-lobbyregister"]
coachingangebote = ["de-coachingangebote"]
dashboarddeutschland = ["de-dashboarddeutschland"]
destatis = ["de-destatis"]
dip_bundestag = ["de-dip-bundestag"]
ecovisio = ["de-ecovisio"]
entgeltatlas = ["de-entgeltatlas"]
feiertage = ["de-feiertage"]
hochwasserzentralen = ["de-hochwasserzentralen"]
klinikatlas = ["de-klinikatlas"]
marktstammdaten = ["de-marktstammdaten"]
pegel_online = ["de-pegel-online"]
pflanzenschutzmittelzulassung = ["de-pflanzenschutzmittelzulassung"]
studiensuche = ["de-studiensuche"]
tagesschau = ["de-tagesschau"]
vag = ["de-vag"]
weiterbildungssuche = ["de-weiterbildungssuche"]
all = [
    "de-abfallnavi",
    "de-ausbildungssuche",
    "de-berufssprachkurssuche",
    "de-bewerberboerse",
    "de-bundeshaushalt",
    "de-bundestag-lobbyregister",
    "de-coachingangebote",
    "de-dashboarddeutschland",
    "de-destatis",
    "de-dip-bundestag",
    "de-dip-bundestag",
    "de-ecovisio",
    "de-entgeltatlas",
    "de-feiertage",
    "de-hochwasserzentralen",
    "de-klinikatlas",
    "de-marktstammdaten",
    "de-pegel-online",
    "de-pflanzenschutzmittelzulassung",
    "de-studiensuche",
    "de-tagesschau",
    "de-vag",
    "de-weiterbildungssuche",
]
#lebensmittelwarnung =  ["de-lebensmittelwarnung"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "22.8.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310
isolated_build = True

[tox:.package]
basepython = python3

[testenv]
poetry_experimental_add_locked_dependencies = True
deps = pytest
usedevelop = true
extras =
    all
commands =
    pytest
"""


[tool.isort]
profile = "black"
